<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grubber</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for restaurants or food</string>
    <string name="search_nearby">Find Nearby</string>
    <string name="title_activity_results">Results</string>
    <string name="login">Login/Register</string>
    <string name="title_activity_food_page">Reviews</string>
    <string name="menu_settings">Settings</string>
    <string name="food_name">Food Name</string>
    <string name="food_rating">9001</string>
    <string name="comment">Comment Here!</string>
    <string name="submit">Submit</string>
    <string name="sample_text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut elit ipsum, ut suscipit purus. Vestibulum lobortis facilisis posuere. Ut mollis sapien at neque gravida nec fringilla mi sollicitudin. Fusce rhoncus, leo sed dapibus dignissim, lorem dui aliquam justo, quis volutpat sem elit sit amet ligula.   "</string>
    <string name="signout">Sign Out</string>
    <string name="user_profile">User Profile</string>
    <string name="about">About </string>
    <string name="logout_msg">Are you sure you want to log out?</string>
    <string name="title_activity_restaurant">Restaurant Information</string>
    <string name="menu_search">Search</string>
    <string name="title_activity_reivew">Review Activity</string>
    <string name="title_activity_review_single">Review</string>
    <string name="title_activity_new_restaurant">Add Restaurant</string>
    <string name="addressSTR">Address</string>
    <string name="citySTR">City</string>
    <string name="stateSTR">State</string>
    <string name="restaurant_verifyString">Verify</string>
    <string name="title_activity_new_restaurant_addr_verify">NewRestaurantAddrVerifyActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="location">Use current location</string>
    <string name="location_hint">Enter an address</string>
    <string name="title_activity_new_food">Add Food</string>
    <string name="descriptionSTR">Description</string>
    <string name="nameSTR">Name</string>
    <string name="ok">OK</string>
    <string name="mi5">5 miles</string>
    <string name="mi10">10 miles</string>
    <string name="mi25">25 miles</string>
    <string name="need_services">This application requires locations services and an internet connection. Please check your settings and try again.</string>
    <string name="title_activity_top_food">Top 5</string>
    <string name="title_activity_top_restaurant">Top Restaurants</string>
    <string name="title_activity_trending">Trending Food</string>
    <string name="title_activity_about">About</string>

</resources>