<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >    


    <Button
        android:id="@+id/main_search"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
		android:text="@string/search"
    	android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:onClick="openSearchDialog" />
    
    <Button
        android:id="@+id/nearby"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
		android:text="@string/search_nearby"
    	android:layout_centerHorizontal="true"
        android:layout_below="@+id/main_search"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:onClick="doSearchNearby" />
   
     <Button
        android:id="@+id/login"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
		android:text="@string/login"
    	android:layout_centerHorizontal="true"
        android:layout_below="@+id/nearby"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:onClick="doLogin" />


     
    
</RelativeLayout>