<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewFoodActivity" >
    
    <LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center"
		android:orientation="vertical" 
		android:focusable="true" 
		android:focusableInTouchMode="true">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip" >

			<TextView
			    android:id="@+id/food_nameTV"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/nameSTR"
				android:textAppearance="?android:attr/textAppearanceMedium" />
			<EditText
			    android:id="@+id/food_nameET"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_weight="0.92"
			    android:singleLine="true"
			    android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip" >

			<TextView
			    android:id="@+id/food_descriptionTV"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/descriptionSTR"
				android:textAppearance="?android:attr/textAppearanceMedium" />
			<EditText
			    android:id="@+id/food_descriptionET"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_weight="0.92"
			    android:singleLine="true"
			    android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        
     	<Button
     	    android:id="@+id/submitBTN"
     	    android:layout_width="wrap_content"
     	    android:layout_height="wrap_content"
     	    android:text="@string/restaurant_verifyString" 
     	    android:layout_marginTop="8dip"/>
    </LinearLayout>

</RelativeLayout>